Display camera to take photos

--- a/InstaClone/Info.plist
+++ b/InstaClone/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Upload cute images of yourself</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Take awesome photos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
